fixed aligning issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@
       opacity: .7;
     }
     #wholediv {
-      width:75%;
+      width:72%;
     }
     #game-form{
       float:right;
